--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
             <div><i class="fas fa-sun"></i></div>
           </li>
         </ul>
+        <a href="https://github.com/amymes/weather-project-AM"
+          >Github Repository</a
+        >
       </div>
     </div>
     <script src="src/index.js"></script>
