Adding Weather Icon

--- a/index.html
+++ b/index.html
@@ -58,12 +58,9 @@
         <h1 id="city"></h1>
         <h2></h2>
         <h3 id="description"></h3>
-        <img
-          src="media/weathericon.png"
-          alt="Weather Icon"
-          width="120"
-          class="currentImage"
-        />
+        <div class="clearfix weather-temperature">
+          <img src="" alt="Weather Icon" width="120" id="icon" />
+        </div>
         <div>
           <ul class="conditions">
             <li>WIND: <span id="wind"></span>m/h</li>
