Inline Temperature Fix

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <h2></h2>
         <h3 id="description"></h3>
         <div class="clearfix weather-temperature">
-          <img src="" alt="Weather Icon" width="120" id="icon" />
+          <img src="#" alt="Weather Icon" width="120" id="icon" />
         </div>
         <div>
           <ul class="conditions">
@@ -102,7 +102,7 @@
           </li>
         </ul>
       </div>
-      <a href="https://github.com/amymes/weather-project-AM"
+      <a href="https://github.com/amymes/weather-project-AM" class="repository"
         >Github Repository</a
       >
     </div>
