Reformatted the forecast HTML and CSS

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,500&family=Quicksand:wght@300;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@200;500&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://kit.fontawesome.com/7510609b3d.js"
       crossorigin="anonymous"
@@ -76,31 +82,25 @@
         </div>
 
         <h4>
-          <strong>5-DAY </strong>
+          <strong class="forecast-title">5-DAY </strong>
           FORECAST
         </h4>
-        <ul id="forecast">
-          <li class="days">
-            FRIDAY
-            <div><i class="fas fa-cloud-showers-heavy"></i></div>
-          </li>
-          <li class="days">
-            SATURDAY
-            <div><i class="fas fa-sun"></i></div>
-          </li>
-          <li class="days">
-            SUNDAY
-            <div><i class="fas fa-cloud-sun"></i></div>
-          </li>
-          <li class="days">
-            MONDAY
-            <div><i class="fas fa-cloud-showers-heavy"></i></div>
-          </li>
-          <li class="days">
-            TUESDAY
-            <div><i class="fas fa-sun"></i></div>
-          </li>
-        </ul>
+        <div class="weather-forecast">
+          <div class="row">
+            <div class="col-2">
+              <div class="weather-forecast-date">Thu</div>
+              <img
+                src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
+                alt=""
+                width="42"
+              />
+              <div class="weather-forecast-temperature">
+                <span class="weather-forecast-temperature-max">18°</span>
+                <span class="weather-forecast-temperature-min">12°</span>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <a href="https://github.com/amymes/weather-project-AM" class="repository"
         >Github Repository</a
