--- a/index.html
+++ b/index.html
@@ -85,22 +85,7 @@
           <strong class="forecast-title">5-DAY </strong>
           FORECAST
         </h4>
-        <div class="weather-forecast">
-          <div class="row">
-            <div class="col-2">
-              <div class="weather-forecast-date">Thu</div>
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
-                alt=""
-                width="42"
-              />
-              <div class="weather-forecast-temperature">
-                <span class="weather-forecast-temperature-max">18°</span>
-                <span class="weather-forecast-temperature-min">12°</span>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div class="weather-forecast" id="weather-forecast"></div>
       </div>
       <a href="https://github.com/amymes/weather-project-AM" class="repository"
         >Github Repository</a
