Unit conversion UI changes

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@200;500&display=swap"
       rel="stylesheet"
     />
+
     <script
       src="https://kit.fontawesome.com/7510609b3d.js"
       crossorigin="anonymous"
@@ -62,7 +63,7 @@
           </div>
         </form>
         <h1 id="city"></h1>
-        <h2></h2>
+        <h2 class="time"></h2>
         <h3 id="description"></h3>
         <div class="clearfix weather-temperature">
           <img src="#" alt="Weather Icon" width="120" id="icon" />
@@ -76,14 +77,14 @@
         <div class="temperatureDisplay" id="temperatureDisplay">
           <strong id="temperature" class="temperature"></strong>
           <span class="units">
-            <a href="#" id="celsius-link">°C</a> |
+            <a href="#" id="celsius-link" class="active">°C</a> |
             <a href="#" id="fahrenheit-link">°F</a>
           </span>
         </div>
 
         <h4>
-          <strong class="forecast-title">5-DAY </strong>
-          FORECAST
+          <strong class="forecast-title">5-Day </strong>
+          Forecast
         </h4>
         <div class="weather-forecast" id="weather-forecast"></div>
       </div>
