Forecast API Integration
Adding search data to forecasting data. Adding min, max, days and icons to be accurate of the forecast

--- a/index.html
+++ b/index.html
@@ -88,9 +88,12 @@
         </h4>
         <div class="weather-forecast" id="weather-forecast"></div>
       </div>
-      <a href="https://github.com/amymes/weather-project-AM" class="repository"
-        >Github Repository</a
-      >
+      <div class="repository">
+        <a href="https://github.com/amymes/weather-project-AM"
+          >Github Repository</a
+        >
+        coded by Amy Mes
+      </div>
     </div>
     <script src="src/index.js"></script>
   </body>
